--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,7 @@ body {
     color: var(--color-black);
     font-size: 14px;
     line-height: 1.5;
+    padding: 2rem;
 }
 
 a {
@@ -49,6 +50,16 @@ strong {
 
 img {
     max-width: 100%;
+    display: block;
+}
+
+.component img {
+    max-width: initial;
+}
+
+.component__img {
+    border: solid 1px #ccc;
+    overflow-x: auto;
 }
 
 h1, h2, h3, h4, h5, h6 {
