--- a/img/components/index.html
+++ b/img/components/index.html
@@ -14,11 +14,12 @@
         
         <article class="component">
             <h3 class="component__name">body</h3>
-            <img
-                class="component__img"
-                srcset="img-ref/homepage-production-desc.png 2x"
-                src="img-ref/homepage-production-desc.png"
-                alt="body copy">
+            <div class="component__img">
+                <img
+                    srcset="img-ref/homepage-production-desc.png 2x"
+                    src="img-ref/homepage-production-desc.png"
+                    alt="body copy">
+            </div>
             <div class="component__code">
                 <p>Nous sommes <strong>Compose it, </strong>une agence de Production et R&eacute;alisation Audiovisuelle.</p>
                 <p>Nous sommes une &eacute;quipe de sept permanents et disposons de toutes les comp&eacute;tences de la production de films en interne. Nous sommes agiles et mettons en oeuvre les id&eacute;es de nos clients.</p>
@@ -27,6 +28,41 @@
                 <p>Nous &eacute;voluons dans diff&eacute;rents univers, et vivons des aventures avec nos clients, car nous sommes curieux, ouverts et passionn&eacute;s : nous irons, ensemble, l&agrave; ou vous nous emmenerez.</p>
                 <p><strong>Let&#8217;s Talk about your project, we will Compose it for you !</strong></p>
             </div>
+
+            <article class="component">
+                <h3 class="component__name">headings (h1, h2, h3, h4)</h3>
+                <div class="component__img">
+                    <img
+                        srcset="img-ref/homepage-agency-headline.png 2x"
+                        src="img-ref/homepage-agency-headline.png"
+                        alt="body copy">
+
+                        <img
+                        srcset="img-ref/homepage-work-item-headline.png 2x"
+                        src="img-ref/homepage-work-item-headline.png"
+                        alt="body copy">
+
+                        <img
+                        srcset="img-ref/homepage-agency-subhead.png 2x"
+                        src="img-ref/homepage-agency-subhead.png"
+                        alt="body copy">
+
+                        <img
+                        srcset="img-ref/homepage-agency-desc_section.png 2x"
+                        src="img-ref/homepage-agency-desc_section.png"
+                        alt="body copy">
+
+                </div>
+                <div class="component__code">
+                    <p>Nous sommes <strong>Compose it, </strong>une agence de Production et R&eacute;alisation Audiovisuelle.</p>
+                    <p>Nous sommes une &eacute;quipe de sept permanents et disposons de toutes les comp&eacute;tences de la production de films en interne. Nous sommes agiles et mettons en oeuvre les id&eacute;es de nos clients.</p>
+                    <p>Nos deux r&eacute;alisateurs inhouse sont garants de la vision artistique de chaque production. Nous sommes cr&eacute;atifs et accompagnons nos clients dans l&#8217;&eacute;criture et la conception des projets.</p>
+                    <p>Nos monteurs assurent la post-production des films au sein de nos bureaux. Nous sommes agiles afin de garantir le suivi de chaque projet dans le respect des d&eacute;lais.</p>
+                    <p>Nous &eacute;voluons dans diff&eacute;rents univers, et vivons des aventures avec nos clients, car nous sommes curieux, ouverts et passionn&eacute;s : nous irons, ensemble, l&agrave; ou vous nous emmenerez.</p>
+                    <p><strong>Let&#8217;s Talk about your project, we will Compose it for you !</strong></p>
+                </div>
+            </article>
+
         </article>
     </body>
 </html>
