--- a/img/components/index.html
+++ b/img/components/index.html
@@ -43,8 +43,8 @@
                         alt="body copy">
                 </div>
                 <div class="component__code">
-                    <h1 class="headline">Compose it</h1>
-                    <h1 class="headline headline--red">Compose It</h1>
+                    <h1 class="h-one">Compose it</h1>
+                    <h1 class="h-one h-one--red">Compose It</h1>
                 </div>
             </article>
 
