--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,21 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 1.3;
 }
 
+.h-one {
+    color: var(--color-cream);
+    background-color: var(--color-red);
+    font-weight: var(--font-weight-headline);
+    font-size: 180px;
+    text-transform: uppercase;
+    margin: 0 auto;
+    text-align: left;
+}
+
+.h-one--red {
+    color: var(--color-red);
+    background-color:transparent;
+}
+
 .organism {
     background-color: var(--color-cream);
 }
