--- a/img/components/index.html
+++ b/img/components/index.html
@@ -48,21 +48,18 @@
                 </div>
             </article>
 
-            <!--
-            <img
-            srcset="img-ref/homepage-work-item-headline.png 2x"
-            src="img-ref/homepage-work-item-headline.png"
-            alt="body copy">
-
-            <img
-            srcset="img-ref/homepage-agency-subhead.png 2x"
-            src="img-ref/homepage-agency-subhead.png"
-            alt="body copy">
-
-            <img
-            srcset="img-ref/homepage-agency-desc_section.png 2x"
-            src="img-ref/homepage-agency-desc_section.png"
-            alt="body copy">-->
+            <article class="component">
+                <h3 class="component__name">H2</h3>
+                <div class="component__img">
+                        <img
+                        srcset="img-ref/homepage-work-item-h2.png 2x"
+                        src="img-ref/homepage-work-item-h2.png"
+                        alt="body copy">
+                </div>
+                <div class="component__code">
+                    <h2 class="h-two">Fall Guys</h2>
+                </div>
+            </article>
 
         </article>
     </body>
