--- a/img/components/index.html
+++ b/img/components/index.html
@@ -35,12 +35,12 @@
                     <img
                         srcset="img-ref/homepage-agency-h1.png 2x"
                         src="img-ref/homepage-agency-h1.png"
-                        alt="body copy">
+                        alt="h1 normal">
 
                         <img
                         srcset="img-ref/project-content-h1.png 2x"
                         src="img-ref/project-content-h1.png"
-                        alt="body copy">
+                        alt="h1 red">
                 </div>
                 <div class="component__code">
                     <h1 class="h-one">Compose it</h1>
@@ -54,12 +54,32 @@
                         <img
                         srcset="img-ref/homepage-work-item-h2.png 2x"
                         src="img-ref/homepage-work-item-h2.png"
-                        alt="body copy">
+                        alt="h2 normal">
                 </div>
                 <div class="component__code">
                     <h2 class="h-two">Fall Guys</h2>
                 </div>
             </article>
+
+            <article class="component">
+                <h3 class="component__name">H3</h3>
+                <div class="component__img">
+                    <img
+                    srcset="img-ref/project-content-h3.png 2x"
+                    src="img-ref/project-content-h3.png"
+                    alt="h3 normal">
+
+                    <img
+                        srcset="img-ref/homepage-production-link-h3.png 2x"
+                        src="img-ref/homepage-production-link-h3.png"
+                        alt="h3 red">
+                </div>
+                <div class="component__code">
+                    <h3 class="h-three">Campagne TV</h3>
+                    <h3 class="h-three h-three--red">Découvrir tous les projets</h3>
+                </div>
+            </article>
+
 
         </article>
     </body>
