--- a/img/components/index.html
+++ b/img/components/index.html
@@ -80,6 +80,25 @@
                 </div>
             </article>
 
+            <article class="component">
+                <h3 class="component__name">H4</h3>
+                <div class="component__img">
+                    <img
+                    srcset="img-ref/project-content-h4.png 2x"
+                    src="img-ref/project-content-h4.png"
+                    alt="h4 normal">
+
+                    <img
+                        srcset="img-ref/homepage-trust-h4.png 2x"
+                        src="img-ref/homepage-trust-h4.png"
+                        alt="h4 red">
+                </div>
+                <div class="component__code">
+                    <h4 class="h-four">TV Prod - Service Plan</h4>
+                    <h4 class="h-four h-four--red">Agence service plan</h4>
+                </div>
+            </article>
+
 
         </article>
     </body>
