--- a/img/components/index.html
+++ b/img/components/index.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="component__code">
                     <h1 class="h-one">Compose it</h1>
-                    <h1 class="h-one h-one--red">Compose It</h1>
+                    <h1 class="h-one h-one--red">Mr Store</h1>
                 </div>
             </article>
 
@@ -99,6 +99,18 @@
                 </div>
             </article>
 
+            <article class="component">
+                <h3 class="component__name">Links</h3>
+                <div class="component__img">
+                    <img
+                    srcset="img-ref/homepage-link.png 2x"
+                    src="img-ref/homepage-link.png"
+                    alt="link normal">
+                </div>
+                <div class="component__code">
+                    <a href="#!">Voir Plus</a>
+                </div>
+            </article>
 
         </article>
     </body>
