--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-/* apply a natural box layout model to all elements, but allowing components to change */
+/* Global */
 html {
     box-sizing: border-box;
     font-size: 81.3%; /*13px*/
@@ -43,7 +43,7 @@ body {
     color: var(--color-black);
     font-size: var(--font-size-p);
     line-height: 1.5;
-    padding: 2rem;
+    padding: 0;
 }
 
 a {
@@ -61,6 +61,52 @@ strong {
 
 img {
     max-width: 100%;
+    display: block;
+}
+
+/* Components Library */
+
+aside {
+    width:20%;
+    float: left;
+    background-color: var(--color-cream);
+    position: fixed;
+    padding-top: 2rem;
+    height: 100vh;
+    overflow: scroll;
+}
+
+aside a {
+    text-decoration: none;
+    text-underline-offset: 0;
+    margin-left: 1rem;
+    display: block;
+    color: var(--color-red);
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: 1rem;
+}
+
+aside a:hover {
+    color: var(--color-black);
+}
+
+aside h1, aside h2, aside h3, aside a, aside .logo {
+    padding: .75rem 0rem .75rem 2rem;
+}
+
+section {
+    width: 80%;
+    float: right;
+    padding: 3rem;
+}
+
+.divider {
+    width: 100%;
+    border-color: var(--color-black);
+    border-bottom: solid 1px;
+    padding: 1rem 0rem 1rem 0rem;
+    margin-bottom: 1rem;
     display: block;
 }
 
@@ -83,11 +129,25 @@ img {
     padding: 2rem 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    padding: 1rem 0;
-    margin: 0;
-    line-height: 1.3;
+h1 {
+    font-size: 1.75rem;
 }
+
+h2 {
+    font-size: 1.25rem;
+}
+
+h3 {
+    font-size: 1rem;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    text-transform: uppercase;
+    margin: 0;
+    line-height: 1;
+}
+
+/* Site Headers */
 
 .h-one {
     color: var(--color-cream);
@@ -135,11 +195,12 @@ h1, h2, h3, h4, h5, h6 {
     color: var(--color-red);
 }
 
+/* Site Logos */
+
 .logo {
     fill: var(--color-black);
     width: 10rem;
     display: block;
-    padding: 1rem;
 }
 
 .logo--cream {
@@ -147,6 +208,155 @@ h1, h2, h3, h4, h5, h6 {
     background-color: var(--color-black);
 }
 
+.logomark {
+    fill: var(--color-red);
+    width: 100%;
+}
+
+.logomark--cream {
+    fill: var(--color-cream);
+    background-color: var(--color-red);
+}
+
+/* Site Menu Bar */
+
+.menu {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    width: 10%;
+    color: var(--color-black);
+    background-color: var(--color-cream);
+}
+
+.menu-circle {
+    width: 1.75rem;
+    height: 1.75rem;
+    background: var(--color-black);
+    border-radius: 50%;
+}
+
+.menu--black {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+    width: 10%;
+    color: var(--color-cream);
+    background-color: var(--color-black);
+}
+
+.menu-circle--cream {
+    width: 1.75rem;
+    height: 1.75rem;
+    background: var(--color-cream);
+    border-radius: 50%;
+}
+
+.menu-bar {
+    width: 100%;
+    padding: 2rem 0;
+    background-color: var(--color-cream);
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    border-bottom: 1px solid var(--color-black);
+}
+
+.menu-bar--black {
+    width: 100%;
+    padding: 2rem 0;
+    background-color: var(--color-black);
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    border-bottom: 1px solid var(--color-cream);
+}
+
+/* Project */
+
+div.project-category {
+    align-content: center;
+    gap: .5rem;
+    height: 1.25rem;
+}
+
+.project-arrow {
+    transform: rotate(-135deg);
+    border-radius: 50%;
+    padding: .125rem;
+    border: 1px solid var(--color-black);
+    height: 1.25rem;
+    display: inline;
+}
+
+a.project--link  {
+    text-decoration: none;
+    color: var(--color-black);
+    text-underline-offset: 0;
+    padding-top: 0;
+    text-transform: none;
+    display: block;
+    width: fit-content;
+}
+
+.project-category--hover {
+    display: none;
+}
+  
+a.project--link:hover > .project-category--hover {
+    display: flex;
+} 
+
+.project-category--normal {
+    display: inline; 
+}
+
+a.project--link:hover > .project-category--normal {
+    display: none;
+} 
+
+/* Work Section */
+
+.work-container {
+    width: 100%;
+    height: 100vh;
+    padding: 2rem 0;
+    background-color: var(--color-cream);
+    border-bottom: 1px solid var(--color-black);
+    display: grid;
+    grid-template-columns: minmax(0,1fr) minmax(0,1fr) minmax(0,1fr);
+    grid-auto-flow: column;
+    align-content: space-between;
+    align-items: center;
+}
+
+.work-grid-1, .work-grid-2, .work-grid-3 {
+    justify-self: start;
+    grid-row: span 1;
+    grid-column: span 1;
+}
+
+.work-grid-4 {
+    grid-row: span 3;
+    grid-column: span 1;
+    justify-self: center;
+    align-self: center;
+}
+
+.work-grid-5, .work-grid-6, .work-grid-7 {
+    justify-self: end;
+    grid-row: span 1;
+    grid-column: span 1;
+    text-align: right;
+}
+
+.work-grid-right {
+    float: right;
+}
 
 .organism {
     background-color: var(--color-cream);
