Added Lists Section

--- a/components/index.html
+++ b/components/index.html
@@ -39,6 +39,7 @@
             <h3>Global</h3>
                 <a href="#body">Body</a>
                 <a href="#links">Links</a>
+                <a href="#lists">Lists</a>
             <h3>Headers</h3>
                 <a href="#h-one">h1</a>
                 <a href="#h-two">h2</a>
@@ -60,6 +61,8 @@
             
             <h2 class="comopnent__subhead">Typography defaults</h2>
             
+            <!-- Body -->
+            
             <article class="component">
             <h3 class="component__name" id="body">Body</h3>
             <div class="component__img">
@@ -77,6 +80,9 @@
                 <p><strong>Let&#8217;s Talk about your project, we will Compose it for you !</strong></p>
             </div>
             </article>
+
+            <!-- Links -->
+            
             <article class="component">
                 <h3 class="component__name" id="links">Links</h3>
                 <div class="component__img">
@@ -89,6 +95,41 @@
                     <a href="#!">Voir Plus</a>
                 </div>
             </article>
+
+            <!-- List -->
+
+            <article class="component">
+                <h3 class="component__name" id="lists">Lists</h3>
+                <div class="component__img">
+                    <img
+                    srcset="img-ref/homepage-agency-ul.png 2x"
+                    src="img-ref/homepage-agency-ul.png"
+                    alt="List">
+                    <img
+                    srcset="img-ref/homepage-trust-ul.png 2x"
+                    src="img-ref/homepage-trust-ul.png"
+                    alt="List">
+                </div>
+                <div class="component__code">
+                    <ul class="list--numbered">
+                        <li class="list-item list-item--numbered"><h4 class="h-four">List item</h4><h4 class="h-four">01</h4></li>
+                        <li class="list-item list-item--numbered"><h4 class="h-four">List item</h4><h4 class="h-four">02</h4></li>
+                        <li class="list-item list-item--numbered"><h4 class="h-four">List item</h4><h4 class="h-four">03</h4></li>
+                        <li class="list-item list-item--numbered"><h4 class="h-four">List item</h4><h4 class="h-four">04</h4></li>
+                        <li class="list-item list-item--numbered"><h4 class="h-four">List item</h4><h4 class="h-four">05</h4></li>
+                    </ul>
+                    <ul class="list--nonum">
+                        <li class="list-item list-item--nonum"><h4 class="h-four h-four--red">List item</h4></li>
+                        <li class="list-item list-item--nonum"><h4 class="h-four h-four--red">List item</h4></li>
+                        <li class="list-item list-item--nonum"><h4 class="h-four h-four--red">List item</h4></li>
+                        <li class="list-item list-item--nonum"><h4 class="h-four h-four--red">List item</h4></li>
+                        <li class="list-item list-item--nonum"><h4 class="h-four h-four--red">List item</h4></li>
+                    </ul>
+                </div>
+            </article>
+
+            <!-- h1 -->
+            
             <article class="component">
                 <h3 class="component__name" id="h-one">H1</h3>
                 <div class="component__img">
@@ -106,6 +147,9 @@
                     <h1 class="h-one h-one--red">Mr Store</h1>
                 </div>
             </article>
+
+            <!-- h2 -->
+            
             <article class="component">
                 <h3 class="component__name" id="h-two">H2</h3>
                 <div class="component__img">
@@ -118,6 +162,9 @@
                     <h2 class="h-two">Fall Guys</h2>
                 </div>
             </article>
+
+            <!-- h3 -->
+            
             <article class="component">
                 <h3 class="component__name" id="h-three">H3</h3>
                 <div class="component__img">
@@ -135,6 +182,9 @@
                     <h3 class="h-three h-three--red">Découvrir tous les projets</h3>
                 </div>
             </article>
+
+            <!-- h4 -->
+            
             <article class="component">
                 <h3 class="component__name" id="h-four">H4</h3>
                 <div class="component__img">
@@ -152,6 +202,9 @@
                     <h4 class="h-four h-four--red">Agence service plan</h4>
                 </div>
             </article>
+
+            <!-- Logo -->
+            
             <article class="component">
                 <h3 class="component__name" id="logo-link">Logo</h3>
                 <div class="component__img">
@@ -221,6 +274,9 @@
                     </svg>
                 </div>
             </article>
+
+            <!-- Logomark -->
+            
             <article class="component">
                 <h3 class="component__name" id="logomark">Logomark</h3>
                 <div class="component__img">
@@ -254,6 +310,9 @@
                     </svg>
                 </div>
             </article>
+
+            <!-- Menu -->
+            
             <article class="component">
                 <h3 class="component__name" id="menu">Menu</h3>
                 <div class="component__img">
@@ -275,6 +334,9 @@
                     </div>
                 </div>
             </article>
+
+            <!-- Header Bar -->
+            
             <article class="component">
                 <h3 class="component__name" id="header-bar">Header Bar</h3>
                 <div class="component__img">
@@ -354,6 +416,9 @@
                     </div>
                 </div>
             </article>
+
+            <!-- Project Link -->
+            
             <article class="component">
                 <h3 class="component__name" id="work-project">Project Link</h3>
                 <div class="component__img">
@@ -379,13 +444,16 @@
                     </a>
                 </div>
             </article>
+
+            <!-- Work Section -->
+            
             <article class="component">
                 <h3 class="component__name" id="work-section">Work Section</h3>
                 <div class="component__img">
                         <img
                         srcset="img-ref/homepage-work.png 2x"
                         src="img-ref/homepage-work.png"
-                        alt="Project Link">
+                        alt="Work Section">
                 </div>
                 <div class="component__code">
                     <div class="work-container">
