--- a/css/main.css
+++ b/css/main.css
@@ -358,6 +358,33 @@ a.project--link:hover > .project-category--normal {
     float: right;
 }
 
+/* Lists */
+
+ul {
+    padding: 0;
+    margin: 1rem 0;
+    list-style: none;
+}
+
+.list--nonum, .list--numbered {
+    border-bottom: solid 1px var(--color-black);
+}
+
+.list-item {
+    margin: 0;
+    width: 100%;
+    padding: 1rem 0;
+    border-top: solid 1px var(--color-black);
+}
+
+.list-item--numbered {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+/*unsorted*/
+
 .organism {
     background-color: var(--color-cream);
 }
