--- a/components/index.html
+++ b/components/index.html
@@ -9,32 +9,34 @@
     </head>
     <body>
         <aside class="components__sidebar">
-            <svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 134 25" style="enable-background:new 0 0 134 25;" xml:space="preserve" class="logo logo--component">
-            <g>
-            <path d="M12.5,1.2c3.6-0.1,6.2,2.1,7.1,6.1h0.9V2.2C18.5,0.9,15.3,0,12.3,0C5.3,0,0,4.8,0,11.9c0,7.1,5.3,11.9,12.3,11.9
-                    c3,0,6.2-0.9,8.2-2.2v-5.2h-0.9c-1,4.1-3.6,6.2-7.1,6.1c-4.9-0.1-7.3-4.8-7.3-10.7C5.2,5.9,7.6,1.3,12.5,1.2z"/>
-            <path d="M12.8,17.8c-2,0-3.2-2.5-3.2-5.8c0-3.3,1.2-5.8,3.2-5.8c2,0,3.2,2.4,3.2,5.8C15.9,15.4,14.8,17.8,12.8,17.8z"/>
-            </g>
-            <path d="M48.4,17.8v0.9h-6.6v-0.9c1-0.1,1.4-0.7,1.4-1.8v-6c0-2.1-0.7-3.5-2.4-3.5C39,6.5,38.1,8,38.1,10c0,0.1,0,6,0,6
-                c0,1.1,0.3,1.7,1.3,1.8v0.9h-6.6v-0.9c1-0.1,1.3-0.7,1.3-1.8v-6c0-2.1-0.6-3.5-2.4-3.5c-1.6,0-2.5,1.5-2.5,3.4v6
-                c0,1.1,0.3,1.7,1.4,1.8v0.9h-6.7v-0.9c1-0.1,1.4-0.7,1.4-1.8V8.8c0-1.1-0.3-1.7-1.4-1.7V6.1l4.4-1h0.7V7c1-1.3,2.3-1.9,4-1.9
-                c2.3,0,3.8,1,4.6,2.5c1-1.7,2.5-2.5,4.4-2.5c3.6,0,5.1,2.3,5.1,5.4V16C47,17.1,47.3,17.7,48.4,17.8z"/>
-            <path d="M64.7,12c0,4.3-2.3,6.9-6,6.9c-1.8,0-3.1-0.7-4.1-1.7v5.2c0,1.1,0.3,1.7,1.3,1.7V25h-6.6v-0.9c1-0.1,1.3-0.7,1.3-1.7V8.8
-                c0-1.1-0.3-1.7-1.3-1.7V6.1l4.6-1h0.7v1.7c0.9-1,2.3-1.7,4.1-1.7C62.3,5.1,64.7,7.7,64.7,12z M60.7,12c0-3.3-0.9-5.8-3-5.8
-                c-2.1,0-3.2,2.3-3.2,5.8c0,3.5,1.1,5.8,3.2,5.8C59.9,17.8,60.7,15.3,60.7,12z"/>
-            <path d="M73.2,5.1C69.3,5.1,66,7.5,66,12c0,4.5,3.4,6.9,7.3,6.9c3.9,0,7.3-2.4,7.3-6.9C80.5,7.5,77.1,5.1,73.2,5.1z M73.2,17.8
-                c-2,0-3.2-2.5-3.2-5.8c0-3.3,1.2-5.8,3.2-5.8c2,0,3.2,2.4,3.2,5.8C76.4,15.4,75.2,17.8,73.2,17.8z"/>
-            <path d="M88.7,10.4c2.1,1,4.7,2.1,3.8,5.2c-0.6,2.1-2.7,3.3-5.5,3.3c-1.7,0-3.9-0.5-5.2-1.5v-3.4h0.7c0.6,2.6,2.7,3.9,4.6,3.9
-                c1.1,0,2.1-0.5,2.3-1.4c0.3-1.5-1.1-2-3-2.8c-2.7-1.2-4.9-2.6-4.1-5.9c0.6-2.2,3-2.8,5-2.8c1.4,0,3,0.5,4.2,1.4v3h-0.6
-                C90.1,7,89.1,6,87.2,6c-0.7,0-1.8,0.2-2,1.4C85.2,9,86.8,9.6,88.7,10.4z"/>
-            <path d="M106.9,11.8c-9,0-9,0-9,0c0.4,5.5,6.1,5.9,8.4,3.3l0.5,0.4c-1,1.9-3,3.4-5.7,3.4c-3.8,0-7.2-2.4-7.2-7.1
-                c0-4.2,2.9-6.7,7-6.7c4,0,6.2,2.8,6.1,6.3V11.8z M97.8,10.4h5.5c0-2-0.4-4.4-2.5-4.4C99.1,6.1,98,7.7,97.8,10.4z"/>
-            <path d="M109.4,16.6c0-1.5,1.1-2.4,2.5-2.4c1.4,0,2.5,0.9,2.5,2.4c0,1.5-1.1,2.4-2.5,2.4C110.5,18.9,109.4,18.1,109.4,16.6z"/>
-            <path d="M123.6,17.8v0.9h-6.6v-0.9c1-0.1,1.4-0.7,1.4-1.8V8.8c0-1.1-0.3-1.7-1.4-1.7V6.1l4.6-1h0.7V16
-                C122.2,17.1,122.4,17.7,123.6,17.8z"/>
-            <path d="M133.3,17.1c-0.6,1-1.8,1.9-3.5,1.9c-2,0-3.9-0.7-3.9-3.9V6.8h-2V5.3c2.5,0,4.1-1.8,4.7-4.1c0.8,0,1.2,0,1.2,0v4.1h2.6v1.4
-                h-2.6V15c0,0.9,0.5,1.4,1,1.7c0.7,0.2,1.4,0.1,2-0.4L133.3,17.1z"/>
-            </svg>
+            <a href="/">
+                <svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 134 25" style="enable-background:new 0 0 134 25;" xml:space="preserve" class="logo logo--component">
+                <g>
+                <path d="M12.5,1.2c3.6-0.1,6.2,2.1,7.1,6.1h0.9V2.2C18.5,0.9,15.3,0,12.3,0C5.3,0,0,4.8,0,11.9c0,7.1,5.3,11.9,12.3,11.9
+                        c3,0,6.2-0.9,8.2-2.2v-5.2h-0.9c-1,4.1-3.6,6.2-7.1,6.1c-4.9-0.1-7.3-4.8-7.3-10.7C5.2,5.9,7.6,1.3,12.5,1.2z"/>
+                <path d="M12.8,17.8c-2,0-3.2-2.5-3.2-5.8c0-3.3,1.2-5.8,3.2-5.8c2,0,3.2,2.4,3.2,5.8C15.9,15.4,14.8,17.8,12.8,17.8z"/>
+                </g>
+                <path d="M48.4,17.8v0.9h-6.6v-0.9c1-0.1,1.4-0.7,1.4-1.8v-6c0-2.1-0.7-3.5-2.4-3.5C39,6.5,38.1,8,38.1,10c0,0.1,0,6,0,6
+                    c0,1.1,0.3,1.7,1.3,1.8v0.9h-6.6v-0.9c1-0.1,1.3-0.7,1.3-1.8v-6c0-2.1-0.6-3.5-2.4-3.5c-1.6,0-2.5,1.5-2.5,3.4v6
+                    c0,1.1,0.3,1.7,1.4,1.8v0.9h-6.7v-0.9c1-0.1,1.4-0.7,1.4-1.8V8.8c0-1.1-0.3-1.7-1.4-1.7V6.1l4.4-1h0.7V7c1-1.3,2.3-1.9,4-1.9
+                    c2.3,0,3.8,1,4.6,2.5c1-1.7,2.5-2.5,4.4-2.5c3.6,0,5.1,2.3,5.1,5.4V16C47,17.1,47.3,17.7,48.4,17.8z"/>
+                <path d="M64.7,12c0,4.3-2.3,6.9-6,6.9c-1.8,0-3.1-0.7-4.1-1.7v5.2c0,1.1,0.3,1.7,1.3,1.7V25h-6.6v-0.9c1-0.1,1.3-0.7,1.3-1.7V8.8
+                    c0-1.1-0.3-1.7-1.3-1.7V6.1l4.6-1h0.7v1.7c0.9-1,2.3-1.7,4.1-1.7C62.3,5.1,64.7,7.7,64.7,12z M60.7,12c0-3.3-0.9-5.8-3-5.8
+                    c-2.1,0-3.2,2.3-3.2,5.8c0,3.5,1.1,5.8,3.2,5.8C59.9,17.8,60.7,15.3,60.7,12z"/>
+                <path d="M73.2,5.1C69.3,5.1,66,7.5,66,12c0,4.5,3.4,6.9,7.3,6.9c3.9,0,7.3-2.4,7.3-6.9C80.5,7.5,77.1,5.1,73.2,5.1z M73.2,17.8
+                    c-2,0-3.2-2.5-3.2-5.8c0-3.3,1.2-5.8,3.2-5.8c2,0,3.2,2.4,3.2,5.8C76.4,15.4,75.2,17.8,73.2,17.8z"/>
+                <path d="M88.7,10.4c2.1,1,4.7,2.1,3.8,5.2c-0.6,2.1-2.7,3.3-5.5,3.3c-1.7,0-3.9-0.5-5.2-1.5v-3.4h0.7c0.6,2.6,2.7,3.9,4.6,3.9
+                    c1.1,0,2.1-0.5,2.3-1.4c0.3-1.5-1.1-2-3-2.8c-2.7-1.2-4.9-2.6-4.1-5.9c0.6-2.2,3-2.8,5-2.8c1.4,0,3,0.5,4.2,1.4v3h-0.6
+                    C90.1,7,89.1,6,87.2,6c-0.7,0-1.8,0.2-2,1.4C85.2,9,86.8,9.6,88.7,10.4z"/>
+                <path d="M106.9,11.8c-9,0-9,0-9,0c0.4,5.5,6.1,5.9,8.4,3.3l0.5,0.4c-1,1.9-3,3.4-5.7,3.4c-3.8,0-7.2-2.4-7.2-7.1
+                    c0-4.2,2.9-6.7,7-6.7c4,0,6.2,2.8,6.1,6.3V11.8z M97.8,10.4h5.5c0-2-0.4-4.4-2.5-4.4C99.1,6.1,98,7.7,97.8,10.4z"/>
+                <path d="M109.4,16.6c0-1.5,1.1-2.4,2.5-2.4c1.4,0,2.5,0.9,2.5,2.4c0,1.5-1.1,2.4-2.5,2.4C110.5,18.9,109.4,18.1,109.4,16.6z"/>
+                <path d="M123.6,17.8v0.9h-6.6v-0.9c1-0.1,1.4-0.7,1.4-1.8V8.8c0-1.1-0.3-1.7-1.4-1.7V6.1l4.6-1h0.7V16
+                    C122.2,17.1,122.4,17.7,123.6,17.8z"/>
+                <path d="M133.3,17.1c-0.6,1-1.8,1.9-3.5,1.9c-2,0-3.9-0.7-3.9-3.9V6.8h-2V5.3c2.5,0,4.1-1.8,4.7-4.1c0.8,0,1.2,0,1.2,0v4.1h2.6v1.4
+                    h-2.6V15c0,0.9,0.5,1.4,1,1.7c0.7,0.2,1.4,0.1,2-0.4L133.3,17.1z"/>
+                </svg>
+            </a>
             <div class="divider"></div>
             <h3>Global</h3>
                 <a href="#body">Body</a>
