Edits to Index link

--- a/components/index.html
+++ b/components/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <aside class="components__sidebar">
-            <a href="/">
+            <a href="index.html" class="logo">
                 <svg version="1.1" id="logo" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewbox="0 0 134 25" style="enable-background:new 0 0 134 25;" xml:space="preserve" class="logo logo--component">
                 <g>
                 <path d="M12.5,1.2c3.6-0.1,6.2,2.1,7.1,6.1h0.9V2.2C18.5,0.9,15.3,0,12.3,0C5.3,0,0,4.8,0,11.9c0,7.1,5.3,11.9,12.3,11.9
