--- a/components/index.html
+++ b/components/index.html
@@ -42,6 +42,7 @@
                 <a href="#body">Body</a>
                 <a href="#links">Links</a>
                 <a href="#lists">Lists</a>
+                <a href="#imgs">Images</a>
             <h3>Headers</h3>
                 <a href="#h-one">h1</a>
                 <a href="#h-two">h2</a>
@@ -127,6 +128,49 @@
                         <li class="list-item list-item--nonum"><h4 class="h-four h-four--red">List item</h4></li>
                         <li class="list-item list-item--nonum"><h4 class="h-four h-four--red">List item</h4></li>
                     </ul>
+                </div>
+            </article>
+
+            <!-- Imgs -->
+
+            <article class="component">
+                <h3 class="component__name" id="imgs">Imgs</h3>
+                <div class="component__img">
+                    <img
+                    srcset="img-ref/homepage-references-item.png 2x"
+                    src="img-ref/homepage-references-item.png"
+                    alt="Mr Store Image">
+                    <img
+                    srcset="img-ref/homepage-insta-img.png 2x"
+                    src="img-ref/homepage-insta-img.png"
+                    alt="Instagram Image">
+                    <img
+                    srcset="img-ref/homepage-awards-img.png 2x"
+                    src="img-ref/homepage-awards-img.png"
+                    alt="Award Image">
+                    <img
+                    srcset="img-ref/homepage-trust-img.png 2x"
+                    src="img-ref/homepage-trust-img.png"
+                    alt="Trust Image">
+                </div>
+                <div class="component__code" style="width: 30%;">
+                    <figure class="compimg compimg--project">
+                        <img class="img" src="../img/project-img-mr-store.png">
+                    </figure>
+                    <figcaption class="img-caption--project">Digital</figcaption>
+
+                    <figure class="compimg compimg--insta">
+                        <img class="img" src="../img/insta-img-cameras.jpeg">
+                    </figure>
+
+                    <figure class="compimg compimg--awards">
+                        <img class="img" src="../img/awards-nikon-film-fest.png">
+                    </figure>
+
+                    <figure class="compimg compimg--trust">
+                        <img class="img" src="../img/trust-img-service-plan.png">
+                    </figure>
+
                 </div>
             </article>
 
