--- a/css/main.css
+++ b/css/main.css
@@ -553,13 +553,9 @@ a.project--link:hover > .project-category--normal {
 }
 
 
-/*unsorted*/
+/* Agency */
 
-.organism {
-    background-color: var(--color-cream);
-}
-
-.organism--agency {
+.agency {
     background-color: var(--color-red);
     padding: 4rem;
     margin: 0 auto;
@@ -576,27 +572,7 @@ a.project--link:hover > .project-category--normal {
     color: var(--color-black);
 }
 
-.headline {
-    color: var(--color-black);
-    font-family: termina, sans-serif;
-    font-weight: 900;
-    font-style: normal;
-    font-size: 10.6vw;
-    text-transform: uppercase;
-    margin: 0 auto;
-    text-align: left;
-}
-
-.headline--agency {
-    color: var(--color-cream);
-}
-
-.content__header {
-    font-family: termina, sans-serif;
-    font-weight: 500;
-    font-style: normal;
-    font-size: 2.75vw;
-    text-transform: uppercase;
+.content--agency .h-three, .content--agency .list--numbered {
     flex-basis: 50%;
 }
 
@@ -604,14 +580,6 @@ a.project--link:hover > .project-category--normal {
     flex-basis: 50%;
     font-size: .85vw;
     margin-top: 1rem;
-}
-
-.content__section-head {
-    font-family: termina, sans-serif;
-    font-weight: 600;
-    font-style: normal;
-    text-transform: uppercase;
-    font-size: 1.1vw;
 }
 
 .content__text {
