--- a/components/index.html
+++ b/components/index.html
@@ -44,6 +44,7 @@
                 <a href="#lists">Lists</a>
                 <a href="#imgs">Images</a>
                 <a href="#buttons">Buttons</a>
+                <a href="#table">Table</a>
             <h3>Headers</h3>
                 <a href="#h-one">h1</a>
                 <a href="#h-two">h2</a>
@@ -270,6 +271,112 @@
                         </div>
                     </a>
 
+                </div>
+            </article>
+
+            <!-- Table -->
+
+            <article class="component">
+                <h3 class="component__name" id="table">Table</h3>
+                <div class="component__img">
+                    <img
+                    srcset="img-ref/homepage-awards-table.png 2x"
+                    src="img-ref/homepage-awards-table.png"
+                    alt="Table">
+                </div>
+                <div class="component__code">
+                    <div class="table">
+                        <div class="table__row">
+                            <div class="table__header">Baisser les Potards</div>
+                            <div class="table__content">
+                                <div class="table__hover">
+                                    <div class="table__item">Nikon Film Festival 2020</div>
+                                    <div class="table__item">Sélection Finaliste Top 50</div>
+                                </div>
+                                <figure class="compimg compimg--awards table__img">
+                                    <img class="img" src="../img/BALAIS-TOP50-480x223.png">
+                                </figure>
+                            </div>
+                        </div>
+                        <div class="table__row">
+                            <div class="table__header">Passage</div>
+                            <div class="table__content">
+                                <div class="table__hover">
+                                    <div class="table__item">Experimental, Dance & Music Film Festival 2019</div>
+                                    <div class="table__item">Best Film</div>
+                                </div>
+                                <figure class="compimg compimg--awards table__img">
+                                    <img class="img" src="../img/BEST-FILM-Experimental-Dance-Music-Film-Festival-2019-1-480x318.png">
+                                </figure>
+                                <div class="table__hover">
+                                    <div class="table__item">Video Mapping Festival 2019</div>
+                                    <div class="table__item">Award Winner</div>
+                                </div>
+                                <figure class="compimg compimg--awards table__img">
+                                    <img class="img" src="../img/AWARD-WINNER-Videomapping-Festival-2019-1-480x318.png">
+                                </figure>
+                                <div class="table__hover">
+                                    <div class="table__item">Sarajevo Fashion Film Festival 2018</div>
+                                    <div class="table__item">Award Winner</div>
+                                </div>
+                                <figure class="compimg compimg--awards table__img">
+                                    <img class="img" src="../img/AWARD-WINNER-Sarajevo-Fashion-Film-Festival-2018-480x318.png">
+                                </figure>
+                                <div class="table__hover">
+                                    <div class="table__item">Roots of Europe International Film Festival 2018</div>
+                                    <div class="table__item">Award Winner</div>
+                                </div>
+                                <figure class="compimg compimg--awards table__img">
+                                    <img class="img" src="../img/AWARD-WINNER-Roots-of-Europe-International-Film-Festival-2018-1-480x318.png">
+                                </figure>
+                            </div>
+                        </div>
+                        <div class="table__row">
+                            <div class="table__header">Eolien et Territoire</div>
+                            <div class="table__content">
+                                <div class="table__hover">
+                                    <div class="table__item">Deauville Green Awards 2019</div>
+                                    <div class="table__item">Trophée Argent dans la catégorie Transition Energétique</div>
+                                </div>
+                                <figure class="compimg compimg--awards table__img">
+                                    <img class="img" src="../img/BORALEX-480x252.png">
+                                </figure>
+                            </div>
+                        </div>
+                        <div class="table__row">
+                            <div class="table__header">Renaître ici</div>
+                            <div class="table__content">
+                                <div class="table__hover">
+                                    <div class="table__item">Trophées de la vidéo Touristique 2019</div>
+                                    <div class="table__item">Nomination Meilleure vidéo de Destination Touristique</div>
+                                </div>
+                                <figure class="compimg compimg--awards table__img">
+                                    <img class="img" src="../img/AURA-PRIX-TOURISTIQUE-480x259.png">
+                                </figure>
+                                <div class="table__hover">
+                                    <div class="table__item">Master of Art Film Festival 2019</div>
+                                    <div class="table__item">Nomination Video Art & Art Advertising</div>
+                                </div>
+                                <figure class="compimg compimg--awards table__img">
+                                    <img class="img" src="../img/AURA-PRIX-MASTER-OF-ART.png">
+                                </figure>
+                                <div class="table__hover">
+                                    <div class="table__item">Experimental Dance & Music Film Festival 2019</div>
+                                    <div class="table__item">Nomination Dance Short Film Los Angeles</div>
+                                </div>
+                                <figure class="compimg compimg--awards table__img">
+                                    <img class="img" src="../img/AURA-PRIX-EXPER-LA.png">
+                                </figure>
+                                <div class="table__hover">
+                                    <div class="table__item">Experimental Dance & Music Film Festival 2019</div>
+                                    <div class="table__item">Nomination Dance Short Film Toronto</div>
+                                </div>
+                                <figure class="compimg compimg--awards table__img">
+                                    <img class="img" src="../img/AURA-PRIX-EXPER-TORONTO.png">
+                                </figure>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </article>
 
