Added Awards Section

--- a/components/index.html
+++ b/components/index.html
@@ -59,7 +59,8 @@
             <h3>Work Section</h3>
                 <a href="#work-project">Project Link</a>
                 <a href="#work-section">Work Section</a>  
-                <a href="#agency-section">Agency Section</a>   
+                <a href="#agency-section">Agency Section</a>
+                <a href="#awards-section">Awards Section</a>   
             <div class="divider"></div>
         </aside>
         <section class="components_section">
@@ -855,6 +856,117 @@
                 </div>
             </article>
 
+            <!-- Awards Section -->
+
+            <article class="component">
+                <h3 class="component__name" id="awards-section">Awards Section</h3>
+                <div class="component__img">
+                        <img
+                        srcset="img-ref/homepage-awards.png 2x"
+                        src="img-ref/homepage-awards.png"
+                        alt="Awards Section">
+                </div>
+                <div class="component__code">
+                    <article class="awards">
+                        <h1 class="h-one">Récompenses</h1>
+                        <div class="content content--awards">
+                            <div class="table">
+                                <div class="table__row">
+                                    <div class="table__header">Baisser les Potards</div>
+                                    <div class="table__content">
+                                        <div class="table__hover">
+                                            <div class="table__item">Nikon Film Festival 2020</div>
+                                            <div class="table__item">Sélection Finaliste Top 50</div>
+                                        </div>
+                                        <figure class="compimg compimg--awards table__img">
+                                            <img class="img" src="../img/BALAIS-TOP50-480x223.png">
+                                        </figure>
+                                    </div>
+                                </div>
+                                <div class="table__row">
+                                    <div class="table__header">Passage</div>
+                                    <div class="table__content">
+                                        <div class="table__hover">
+                                            <div class="table__item">Experimental, Dance & Music Film Festival 2019</div>
+                                            <div class="table__item">Best Film</div>
+                                        </div>
+                                        <figure class="compimg compimg--awards table__img">
+                                            <img class="img" src="../img/BEST-FILM-Experimental-Dance-Music-Film-Festival-2019-1-480x318.png">
+                                        </figure>
+                                        <div class="table__hover">
+                                            <div class="table__item">Video Mapping Festival 2019</div>
+                                            <div class="table__item">Award Winner</div>
+                                        </div>
+                                        <figure class="compimg compimg--awards table__img">
+                                            <img class="img" src="../img/AWARD-WINNER-Videomapping-Festival-2019-1-480x318.png">
+                                        </figure>
+                                        <div class="table__hover">
+                                            <div class="table__item">Sarajevo Fashion Film Festival 2018</div>
+                                            <div class="table__item">Award Winner</div>
+                                        </div>
+                                        <figure class="compimg compimg--awards table__img">
+                                            <img class="img" src="../img/AWARD-WINNER-Sarajevo-Fashion-Film-Festival-2018-480x318.png">
+                                        </figure>
+                                        <div class="table__hover">
+                                            <div class="table__item">Roots of Europe International Film Festival 2018</div>
+                                            <div class="table__item">Award Winner</div>
+                                        </div>
+                                        <figure class="compimg compimg--awards table__img">
+                                            <img class="img" src="../img/AWARD-WINNER-Roots-of-Europe-International-Film-Festival-2018-1-480x318.png">
+                                        </figure>
+                                    </div>
+                                </div>
+                                <div class="table__row">
+                                    <div class="table__header">Eolien et Territoire</div>
+                                    <div class="table__content">
+                                        <div class="table__hover">
+                                            <div class="table__item">Deauville Green Awards 2019</div>
+                                            <div class="table__item">Trophée Argent dans la catégorie Transition Energétique</div>
+                                        </div>
+                                        <figure class="compimg compimg--awards table__img">
+                                            <img class="img" src="../img/BORALEX-480x252.png">
+                                        </figure>
+                                    </div>
+                                </div>
+                                <div class="table__row">
+                                    <div class="table__header">Renaître ici</div>
+                                    <div class="table__content">
+                                        <div class="table__hover">
+                                            <div class="table__item">Trophées de la vidéo Touristique 2019</div>
+                                            <div class="table__item">Nomination Meilleure vidéo de Destination Touristique</div>
+                                        </div>
+                                        <figure class="compimg compimg--awards table__img">
+                                            <img class="img" src="../img/AURA-PRIX-TOURISTIQUE-480x259.png">
+                                        </figure>
+                                        <div class="table__hover">
+                                            <div class="table__item">Master of Art Film Festival 2019</div>
+                                            <div class="table__item">Nomination Video Art & Art Advertising</div>
+                                        </div>
+                                        <figure class="compimg compimg--awards table__img">
+                                            <img class="img" src="../img/AURA-PRIX-MASTER-OF-ART.png">
+                                        </figure>
+                                        <div class="table__hover">
+                                            <div class="table__item">Experimental Dance & Music Film Festival 2019</div>
+                                            <div class="table__item">Nomination Dance Short Film Los Angeles</div>
+                                        </div>
+                                        <figure class="compimg compimg--awards table__img">
+                                            <img class="img" src="../img/AURA-PRIX-EXPER-LA.png">
+                                        </figure>
+                                        <div class="table__hover">
+                                            <div class="table__item">Experimental Dance & Music Film Festival 2019</div>
+                                            <div class="table__item">Nomination Dance Short Film Toronto</div>
+                                        </div>
+                                        <figure class="compimg compimg--awards table__img">
+                                            <img class="img" src="../img/AURA-PRIX-EXPER-TORONTO.png">
+                                        </figure>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <a href="#!">Découvrir toutes les récompenses</a>
+                    </article>
+                </div>
+            </article>
 
         </section>
     </body>
